crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__a_finally_is_lowered_once_per_exit_out_of_the_protected_region.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-8:6
    ; stmt s1 @5:7-5:25
    v1 = call T::inner() ! bb3  ; int
    ; stmt s2 @7:7-7:19
    v2 = const.str "done"  ; string
    helper.echo_str v2 ! bb4
    release v2
    release v0
    return v1
  bb1:
    v3 = take.thrown  ; object
    ; stmt s3 @7:7-7:19
    v4 = const.str "done"  ; string
    helper.echo_str v4 ! bb5
    release v4
    throw v3 -> bb6
  bb2:
    release v0
    return
  bb3:
    catch -> bb1
  bb4:
    release v0
    propagate "m() at t.mwl:7"
  bb5:
    release v0
    propagate "m() at t.mwl:7"
  bb6:
    release v0
    propagate "m() at t.mwl:7"
}
