crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__a_mixed_parameter_round_trips_through_return.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn pick(object, mixed) -> mixed {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; mixed
    ; stmt s0 @4:5-4:15
    return v1
}
